packages/go/.lib/macos-arm64/include/spikard.h

/**
 * Builder for defining a route.
 */
typedef struct SPIKARDRouteBuilder SPIKARDRouteBuilder;
/**
 * Server configuration
 */
typedef struct SPIKARDServerConfig SPIKARDServerConfig;
/**
 * Opaque handle to a App service instance.
 * Allocated by spikard_app_new(), freed by spikard_app_free().
 *
 * `inner` is `Option<Box<…>>` so a `Finalize` entrypoint can `.take()` the
 * owner out without invalidating the C pointer. Consumers must still call
 * `spikard_app_free()` after a `Finalize` returns to release the opaque
 * shell; the shell drops trivially when `inner` is `None`.
 */
typedef struct SPIKARDAppOpaque {
    SPIKARDApp *inner;
} SPIKARDAppOpaque;
/**
 * Allocate a new App instance.
 *
 * # Safety
 * The returned pointer must be freed via spikard_app_free().
 * Never access the pointer after freeing it.
 */
struct SPIKARDAppOpaque *spikard_app_new(void);
/**
 * Free a App instance allocated by spikard_app_new().
 *
 * # Safety
 * - `ptr` must have been allocated by spikard_app_new().
 * - After this call, `ptr` is invalid and must not be dereferenced.
 * - Calling this twice on the same pointer causes undefined behavior.
 * - Safe to call even after a `Finalize` entrypoint has emptied `inner`.
 */
void spikard_app_free(struct SPIKARDAppOpaque *ptr);
/**
 * Register a handler callback for method 'route'.
 *
 * # Safety
 * - `owner` must be a valid pointer returned by `spikard_app_new()` and not yet freed.
 * - `callback` must be a valid function pointer that remains valid for the lifetime
 *   of this service instance.
 * - `context` is an opaque pointer passed to the callback on each invocation.
 *   The caller is responsible for keeping it valid.
 * Returns 0 on success, non-zero error code on failure.
 */
int32_t spikard_app_register_route(struct SPIKARDAppOpaque *owner,
    char *(*callback)(void*,
        const char*),
    void *context,
    SPIKARDRouteBuilder *builder);
/**
 * Register a GET route at the given path.
 *
 * # Safety
 * - `owner` must be a valid pointer returned by `spikard_app_new()` and not yet freed.
 * - `callback` must be a valid function pointer that remains valid for the lifetime
 *   of this service instance.
 * - `context` is an opaque pointer passed to the callback on each invocation.
 *   The caller is responsible for keeping it valid.
 * Returns 0 on success, non-zero error code on failure.
 */
int32_t spikard_app_get(struct SPIKARDAppOpaque *owner,
    char *(*callback)(void*,
        const char*),
    void *context,
    const char *path);
/**
 * Register a POST route at the given path.
 *
 * # Safety
 * - `owner` must be a valid pointer returned by `spikard_app_new()` and not yet freed.
 * - `callback` must be a valid function pointer that remains valid for the lifetime
 *   of this service instance.
 * - `context` is an opaque pointer passed to the callback on each invocation.
 *   The caller is responsible for keeping it valid.
 * Returns 0 on success, non-zero error code on failure.
 */
int32_t spikard_app_post(struct SPIKARDAppOpaque *owner,
    char *(*callback)(void*,
        const char*),
    void *context,
    const char *path);
/**
 * Register a PUT route at the given path.
 *
 * # Safety
 * - `owner` must be a valid pointer returned by `spikard_app_new()` and not yet freed.
 * - `callback` must be a valid function pointer that remains valid for the lifetime
 *   of this service instance.
 * - `context` is an opaque pointer passed to the callback on each invocation.
 *   The caller is responsible for keeping it valid.
 * Returns 0 on success, non-zero error code on failure.
 */
int32_t spikard_app_put(struct SPIKARDAppOpaque *owner,
    char *(*callback)(void*,
        const char*),
    void *context,
    const char *path);
/**
 * Register a PATCH route at the given path.
 *
 * # Safety
 * - `owner` must be a valid pointer returned by `spikard_app_new()` and not yet freed.
 * - `callback` must be a valid function pointer that remains valid for the lifetime
 *   of this service instance.
 * - `context` is an opaque pointer passed to the callback on each invocation.
 *   The caller is responsible for keeping it valid.
 * Returns 0 on success, non-zero error code on failure.
 */
int32_t spikard_app_patch(struct SPIKARDAppOpaque *owner,
    char *(*callback)(void*,
        const char*),
    void *context,
    const char *path);
/**
 * Register a DELETE route at the given path.
 *
 * # Safety
 * - `owner` must be a valid pointer returned by `spikard_app_new()` and not yet freed.
 * - `callback` must be a valid function pointer that remains valid for the lifetime
 *   of this service instance.
 * - `context` is an opaque pointer passed to the callback on each invocation.
 *   The caller is responsible for keeping it valid.
 * Returns 0 on success, non-zero error code on failure.
 */
int32_t spikard_app_delete(struct SPIKARDAppOpaque *owner,
    char *(*callback)(void*,
        const char*),
    void *context,
    const char *path);
/**
 * Register a HEAD route at the given path.
 *
 * # Safety
 * - `owner` must be a valid pointer returned by `spikard_app_new()` and not yet freed.
 * - `callback` must be a valid function pointer that remains valid for the lifetime
 *   of this service instance.
 * - `context` is an opaque pointer passed to the callback on each invocation.
 *   The caller is responsible for keeping it valid.
 * Returns 0 on success, non-zero error code on failure.
 */
int32_t spikard_app_head(struct SPIKARDAppOpaque *owner,
    char *(*callback)(void*,
        const char*),
    void *context,
    const char *path);
/**
 * Register an OPTIONS route at the given path.
 *
 * # Safety
 * - `owner` must be a valid pointer returned by `spikard_app_new()` and not yet freed.
 * - `callback` must be a valid function pointer that remains valid for the lifetime
 *   of this service instance.
 * - `context` is an opaque pointer passed to the callback on each invocation.
 *   The caller is responsible for keeping it valid.
 * Returns 0 on success, non-zero error code on failure.
 */
int32_t spikard_app_options(struct SPIKARDAppOpaque *owner,
    char *(*callback)(void*,
        const char*),
    void *context,
    const char *path);
/**
 * Register a CONNECT route at the given path.
 *
 * # Safety
 * - `owner` must be a valid pointer returned by `spikard_app_new()` and not yet freed.
 * - `callback` must be a valid function pointer that remains valid for the lifetime
 *   of this service instance.
 * - `context` is an opaque pointer passed to the callback on each invocation.
 *   The caller is responsible for keeping it valid.
 * Returns 0 on success, non-zero error code on failure.
 */
int32_t spikard_app_connect(struct SPIKARDAppOpaque *owner,
    char *(*callback)(void*,
        const char*),
    void *context,
    const char *path);
/**
 * Register a TRACE route at the given path.
 *
 * # Safety
 * - `owner` must be a valid pointer returned by `spikard_app_new()` and not yet freed.
 * - `callback` must be a valid function pointer that remains valid for the lifetime
 *   of this service instance.
 * - `context` is an opaque pointer passed to the callback on each invocation.
 *   The caller is responsible for keeping it valid.
 * Returns 0 on success, non-zero error code on failure.
 */
int32_t spikard_app_trace(struct SPIKARDAppOpaque *owner,
    char *(*callback)(void*,
        const char*),
    void *context,
    const char *path);
/**
 * Configure the service via 'config'.
 *
 * # Safety
 * - `owner` must be a valid pointer returned by `spikard_app_new()` and not yet freed.
 * - The same `owner` pointer is returned on success — the caller does **not**
 *   need to swap the handle they hold. Returns `null` on failure (the original
 *   handle is still valid in that case but should be inspected for usability).
 */
struct SPIKARDAppOpaque *spikard_app_config(struct SPIKARDAppOpaque *owner,
    SPIKARDServerConfig *config);
/**
 * Run the service entrypoint 'run'.
 *
 * # Safety
 * - `owner` must be a valid pointer returned by `spikard_app_new()` and not yet freed.
 * - The inner owner value is moved out by this call and the opaque shell is left
 *   with `inner = None`. The caller may still invoke `()`
 *   afterwards to release the shell; subsequent registration/configurator calls
 *   on the same pointer will fail with the null-return error code.
 */
int32_t spikard_app_ep_run(struct SPIKARDAppOpaque *owner);
/**
 * Run the service entrypoint 'into_router'.
 *
 * # Safety
 * - `owner` must be a valid pointer returned by `spikard_app_new()` and not yet freed.
 * - The inner owner value is moved out by this call and the opaque shell is left
 *   with `inner = None`. The caller may still invoke `()`
 *   afterwards to release the shell; subsequent registration/configurator calls
 *   on the same pointer will fail with the null-return error code.
 */
int32_t spikard_app_ep_into_router(struct SPIKARDAppOpaque *owner);