packages/csharp/src/Spikard/ServiceNativeMethods.cs

// Auto-generated by alef — DO NOT EDIT
// alef:hash:60b0c530ebdb8751f8174a17a726c2edd797aff78bc1ec91fccb51ef60c85ec3
#nullable enable

namespace Spikard {

using System;
using System.Runtime.InteropServices;

/// <summary>
/// Native P/Invoke declarations for service API.
/// </summary>
internal static partial class NativeMethods {

  /// <summary>
  /// Native callback signature for service handlers.
  /// </summary>
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
  public delegate IntPtr HandlerCallback(IntPtr ctx, IntPtr requestJson);

  /// <summary>
  /// Releases a handler response with the allocator family that created it.
  /// </summary>
  [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
  public delegate void HandlerResponseFree(IntPtr responsePtr);
  [DllImport("spikard_ffi", CallingConvention = CallingConvention.Cdecl)]
  public static extern ulong spikard_app_new();

  [DllImport("spikard_ffi", CallingConvention = CallingConvention.Cdecl)]
  public static extern void spikard_app_free(ulong handle);
  [DllImport("spikard_ffi", CallingConvention = CallingConvention.Cdecl)]
  public static extern ulong spikard_app_config(ulong owner, ulong config);
  [DllImport("spikard_ffi", CallingConvention = CallingConvention.Cdecl)]
  public static extern int
  spikard_app_register_route(ulong owner, HandlerCallback callback,
                             HandlerResponseFree responseFree, IntPtr ctx,
                             ulong builder);
  [DllImport("spikard_ffi", CallingConvention = CallingConvention.Cdecl)]
  public static extern int spikard_app_get(ulong owner,
                                           HandlerCallback callback,
                                           HandlerResponseFree responseFree,
                                           IntPtr ctx, string path);
  [DllImport("spikard_ffi", CallingConvention = CallingConvention.Cdecl)]
  public static extern int spikard_app_post(ulong owner,
                                            HandlerCallback callback,
                                            HandlerResponseFree responseFree,
                                            IntPtr ctx, string path);
  [DllImport("spikard_ffi", CallingConvention = CallingConvention.Cdecl)]
  public static extern int spikard_app_put(ulong owner,
                                           HandlerCallback callback,
                                           HandlerResponseFree responseFree,
                                           IntPtr ctx, string path);
  [DllImport("spikard_ffi", CallingConvention = CallingConvention.Cdecl)]
  public static extern int spikard_app_patch(ulong owner,
                                             HandlerCallback callback,
                                             HandlerResponseFree responseFree,
                                             IntPtr ctx, string path);
  [DllImport("spikard_ffi", CallingConvention = CallingConvention.Cdecl)]
  public static extern int spikard_app_delete(ulong owner,
                                              HandlerCallback callback,
                                              HandlerResponseFree responseFree,
                                              IntPtr ctx, string path);
  [DllImport("spikard_ffi", CallingConvention = CallingConvention.Cdecl)]
  public static extern int spikard_app_head(ulong owner,
                                            HandlerCallback callback,
                                            HandlerResponseFree responseFree,
                                            IntPtr ctx, string path);
  [DllImport("spikard_ffi", CallingConvention = CallingConvention.Cdecl)]
  public static extern int spikard_app_options(ulong owner,
                                               HandlerCallback callback,
                                               HandlerResponseFree responseFree,
                                               IntPtr ctx, string path);
  [DllImport("spikard_ffi", CallingConvention = CallingConvention.Cdecl)]
  public static extern int spikard_app_connect(ulong owner,
                                               HandlerCallback callback,
                                               HandlerResponseFree responseFree,
                                               IntPtr ctx, string path);
  [DllImport("spikard_ffi", CallingConvention = CallingConvention.Cdecl)]
  public static extern int spikard_app_trace(ulong owner,
                                             HandlerCallback callback,
                                             HandlerResponseFree responseFree,
                                             IntPtr ctx, string path);
  [DllImport("spikard_ffi", CallingConvention = CallingConvention.Cdecl)]
  public static extern int spikard_app_ep_run(ulong owner);
  [DllImport("spikard_ffi", CallingConvention = CallingConvention.Cdecl)]
  public static extern int spikard_app_ep_into_router(ulong owner);
}

}
